# greygoo

./: .gitignore  Cargo.toml  PHASE4-ECONOMY.md  README.md
.claude/: launch.json
bench/cu-bench/: Cargo.toml
bench/cu-bench/src/: main.rs
crates/econ-lab/: Cargo.toml
crates/econ-lab/src/: main.rs
crates/entropy-lab/: Cargo.toml
crates/entropy-lab/src/: main.rs
crates/sim-core/: Cargo.toml
crates/sim-core/src/: entropy.rs  lib.rs  sector.rs
crates/sim-run/: Cargo.toml
crates/sim-run/src/: main.rs
devnet/: .gitignore  README.md  bootstrap.mjs  package.json
programs/greygoo/: Cargo.toml
programs/greygoo/src/: lib.rs
site/: app.js  devnet.json  greygoo.wasm  index.html  onchain.js  serve.mjs  styles.css  vercel.json
viz/: bundle.mjs  greygoo.wasm  index.html  serve.mjs  standalone.html
viz/greygoo-wasm/: Cargo.toml
viz/greygoo-wasm/src/: lib.rs
