[package]
name = "sim-core"
version = "0.1.0"
edition = "2021"

# Integer-only and dependency-light so this crate drops into a Solana program
# (BPF). The off-chain `World`/`Metrics` live behind the default `std` feature;
# `Rng`, the genome primitives, and the `sector` module are `no_std`.
[features]
default = ["std"]
std = []

[dependencies]
bytemuck = { version = "1", default-features = false, features = ["derive"] }
