[package]
name = "greygoo-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "4.0"
bytemuck = { version = "1", default-features = false }
sim-core = { path = "../../crates/sim-core", default-features = false }

[features]
no-entrypoint = []

[profile.release]
overflow-checks = false
lto = "fat"
codegen-units = 1
